src/style.css
@font-face {
  font-family: 'Indivisible';
  src: url('./assets/fonts/Indivisible-SemiBold.woff2') format('woff2'),
       url('./assets/fonts/Indivisible-SemiBold.woff') format('woff'),
       url('./assets/fonts/Indivisible-SemiBold.eot') format('eot'),
       url('./assets/fonts/Indivisible-SemiBold.ttf') format('ttf');
}

:root {
  --img-ratio: 0.504;
  --box-shadow-bgc: 53, 56, 92;
}

::selection {
  color: black;
  background-color: #ffd064;
}

::-moz-selection {
  color: black;
  background-color: #ffd064;
}

html {
  font-family: "Inter", system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
  color: white;
  scroll-behavior: smooth;
}

h1 {
  font-size: 5rem;
}

h2 {
  font-size: 4.5rem;
}

h3 {
  font-size: 2rem;
  margin: 8px 0;
}

p {
  font-size: 1.5rem;
  color: #9e9e9e;
  font-weight: 300;
  line-height: 150%;
}

hr {
  width: 100%;
  margin: 0;
}

body {
  max-width: 100vw;
  overflow-x: hidden;
  margin: 0;
  background-color: #020202;
}

body.unscrollable {
  max-height: 100vh;
  overflow: hidden;
}

main {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

main > nav {
  display: flex;
  align-items: center;
  justify-content: space-between;
  position: fixed;
  top: 0;
  max-width: 100vw;
  height: 70px;
  width: 100vw;
  margin: 0;
  background-color: rgba(2, 2, 2, 0.487);
  border-bottom: 1px solid rgba(255, 255, 255, 0.27);
  backdrop-filter: blur(10px);
  z-index: 5;
}

nav * {
  margin: 0;
  }

nav > h3 {
  color: rgb(208, 208, 208);
  font-family: "Indivisible", "Inter", system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
  transform: translateY(-100%);
  margin-left: 10%;
  transition: transform .5s ease-out;
}

nav > .links-container {
  color: rgb(167, 167, 167);
  display: flex;
  gap: 80px;
  margin-right: 10%;
}

nav > .links-container h3 {
  font-weight: 600;
  font-size: 1.5rem;
  cursor: pointer;
  transition: transform .2s;
}

nav > .links-container h3:hover {
  transform: translateY(-2px);
}

.banner-heading {
  display: flex;
  max-width: 100%;
  width: 100%;
  justify-content: center;
  align-items: center;
  overflow-x: hidden;
  margin: 0;
}

.banner-heading img {
  max-height: min(140vh, 1500px);
  user-select: none;
}

main > * {
  max-width: 1500px;
  margin: 30px 50px;
}

main > .about-section {
  max-width: 100%;
  margin-top: 0;
}

.about-section > .p-and-wallpaper-container {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.about-section .paragraphs-container {
  position: relative;
  min-width: 700px;
  max-width: 1100px;
  max-height: 300px;
  overflow: hidden;
  transition: max-height .5s;
}

.about-section .paragraphs-container span {
  background: linear-gradient(to right, #9e9e9e, #ffd064);
  -webkit-background-clip: text;
  color: transparent;
}

.about-section .paragraphs-container a {
  color: #bb46ff;
  font-weight: 500;
  text-decoration: none;
}

.about-section .paragraphs-container a:hover {
  color: #9639cc;
  text-decoration: underline;
}

.about-section .paragraphs-container p:first-child {
  margin-top: 0;
}

.about-section .paragraphs-container p:last-child {
  /* margin-bottom: 0; */
}

.about-section .paragraphs-container.after::after {
  content: "more";
  cursor: pointer;
  font-size: 1.6rem;
  font-weight: 500;
  color: #d2d2d2;
  position: absolute;
  top: 90%;
  left: 45%;
  background-image: url('./assets/icons/down.svg');
  background-repeat: no-repeat;
  background-position: 65px 6px;
  padding-right: 35px;
  z-index: 1;
}

.about-section .paragraphs-container.before::before {
  content: "";
  cursor: pointer;
  position: absolute;
  background-image: linear-gradient(to bottom, transparent, #020202 85%);
  top: 60%;
  height: 120px;
  width: 100%;
}

.about-section .wallpaper-container {
  min-width: 400px;
  height: 288px;
  display: flex;
  align-items: center;
}

.about-section .wallpaper-container img {
  object-fit: cover;
  width: 100%;
  min-height: 300px;
  max-height: 400px;
}

.animated-h2-container {
  position: relative;
  margin: 60px 0;
}

.about-section > .animated-h2-container {
  margin-top: 0;
}

.animated-h2-container > .h2-container {
  height: 90px;
  overflow-y: hidden;
}

.h2-container > h2 {
  margin: 0;
}

.spawn-heading-forward {transform: translateY(0);}

.spawn-heading-idle {transform: translateY(20%);}

.spawn-heading {animation: spawn-heading 1s;}

@keyframes spawn-heading {
  0% {
    transform: translateY(20%);
    filter: blur(10px);
    opacity: 0;
    }

    80% {
    transform: translateY(-10%);
    filter: blur(0);
    opacity: 1;
    }

    100% {
    transform: translateY(0);
  }

}

.project-title-container {
  display: inline-block;
  position: relative;
  overflow: hidden;
  width: 100%;
}

.project-title {
  display: inline-block;
  position: absolute;
  white-space: nowrap;
  margin: 60px 0;
  top: 0;
  left: 0;
  transform: translateX(1500px);
}

.project-title.center {
  transform: translateX(0);
  transition: transform .2s;
}

.project-title.left {
  transform: translateX(-1500px);
  transition: transform .2s;
}

.project-title.moving-left.right {
  transform: translateX(1500px);
  transition: none;
}

.project-title.moving-right.right {
  transform: translateX(1500px);
  transition: transform .2s;
}

.project-title.moving-right.left {
  transform: translateX(-1500px);
  transition: none;
}

.projects-first-title {
  transition: transform 1s, color 1s;
}

.projects-first-title.minimize-up {
  transform: scale(.3) translate(-115%, -180%);
  color: #676767;
  transition: transform .2s cubic-bezier(.86,-0.01,.62,1.09), color .2s cubic-bezier(.86,-0.01,.62,1.09);
}

.current-project-container {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-template-rows: auto 1fr;
  justify-items: start;
  column-gap: 70px;
}
/* ... */

